--- a/src/assets/sass/view/_home.scss
+++ b/src/assets/sass/view/_home.scss
@@ -132,7 +132,7 @@
   }
 
   &__oi{
-    color: $color-white;
+    color: $color-dark;
     font-size: 120px;
     line-height: 120px;
     display: block;
@@ -148,7 +148,7 @@
   }
 
   &__list{
-    color: $color-white;
+    color: $color-dark;
     font-size: $font-s-60;
     line-height: $font-s-60;
     letter-spacing: 4px;
